--- a/index.html
+++ b/index.html
@@ -139,5 +139,33 @@
 
   <!-- Scripts -->
   <script src="script.js"></script>
+<a href="https://wa.link/hp39x1" target="_blank" class="whatsapp">
+  💬
+</a>
+
+<style>
+.whatsapp {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #25D366;
+  color: white;
+  font-size: 28px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  transition: transform 0.2s ease;
+  z-index: 999;
+}
+
+.whatsapp:hover {
+  transform: scale(1.1);
+}
+</style>
 </body>
 </html>
